# fastapi-boilerplate

./: README.md  docker-compose.yml  pyproject.toml  setup.cfg
docker/: api-dev.dockerfile  api-production.dockerfile
scripts/: api_reload.sh
